--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-jade": "^1.1.0",
     "gulp-less": "^3.0.2",
     "gulp-minify-css": "^1.0.0",
+    "gulp-newer": "^1.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-rigger": "^0.5.8",
     "gulp-svgmin": "^1.2.1",
